--- a/index.qmd
+++ b/index.qmd
@@ -298,9 +298,13 @@ You can upload a file by navigating clicking on "Upload file" (blue rectangle). 
 
 Your scripts may require some data to run (for instance: training data for an algorithm). Here is a way to download data automatically:
 
-- Upload your data files on the S3 storage of the SSP Cloud, and make sure that the files are public;
 - Adapt the `download_data.sh` file so that the data is downloaded to your folder of choice;
 - Add this script as an initialization script in your configuration (see step 2).
+
+To obtain the S3 path to your data, use the File Explorer to navigate and find the file you want. The S3 path of your file is simply the path of the folder available in the top right corner of the explorer (red rectangle) and the name of the file (blue rectangle). In the screenshot below, the path of the first file is then: `s3/oliviermeslin/data_SILC_PUF/data_SILC_d2013.parquet`.
+
+![](pics/SSPCloud8.png){width=500}
+
 
 ### Developing educational content in Quarto format
 
